--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/easing-functions"]
 	path = libs/easing-functions
 	url = https://github.com/nicolausYes/easing-functions
+[submodule "choc"]
+	path = choc
+	url = https://github.com/Tracktion/choc
